# fluxion

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  PROJECT.md  README.md  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  wheels.yml
crates/fluxion-autodiff/: Cargo.toml
crates/fluxion-autodiff/examples/: eq_inversion.rs  learn_cutoff.rs  train_step_bench.rs
crates/fluxion-autodiff/src/: burn_backend.rs  cuda.rs  graph.rs  lib.rs
crates/fluxion-backend/: Cargo.toml
crates/fluxion-backend/benches/: batch.rs
crates/fluxion-backend/examples/: hotswap_demo.rs  paper_bench.rs  soundlamp_demo.rs
crates/fluxion-backend/src/: cuda.rs  lib.rs
crates/fluxion-cli/: Cargo.toml
crates/fluxion-cli/src/: chain.rs  main.rs  realtime.rs  verbs.rs
crates/fluxion-cli/tests/: cli.rs
crates/fluxion-core/: Cargo.toml
crates/fluxion-core/src/: envelope.rs  frozen.rs  fxg.rs  graph.rs  lib.rs  op.rs  param.rs  signal.rs
crates/fluxion-facade/: Cargo.toml
crates/fluxion-facade/src/: lib.rs
crates/fluxion-facade/tests/: imported_freeze.rs
crates/fluxion-ffi/: Cargo.toml  cbindgen.toml
crates/fluxion-ffi/examples/: smoke.c
crates/fluxion-ffi/include/: fluxion.h
crates/fluxion-ffi/src/: lib.rs
crates/fluxion-io/: Cargo.toml
crates/fluxion-io/src/: arrow.rs  checkpoint.rs  lib.rs
crates/fluxion-io/tests/: checkpoint_golden.rs
crates/fluxion-io/tests/data/: sine_1k_8000_mono.flac
crates/fluxion-io/tests/fixtures/checkpoints/: ddsp_highpass.pt  ddsp_highpass.safetensors  ddsp_lowpass.pt  ddsp_lowpass.safetensors  ddsp_parametric_eq.pt  ddsp_parametric_eq.safetensors  ddsp_peaking.pt  ddsp_peaking.safetensors  flamo_biquad_bandpass.pt  flamo_biquad_bandpass.safetensors  flamo_biquad_highpass.pt  flamo_biquad_highpass.safetensors  flamo_biquad_lowpass.pt  flamo_biquad_lowpass.safetensors  flamo_series_shell.pt  flamo_series_shell.safetensors  flamo_sosfilter.pt  flamo_sosfilter.safetensors  flamo_svf_general.pt  flamo_svf_general.safetensors  flamo_svf_highshelf.pt  flamo_svf_highshelf.safetensors  flamo_svf_lowpass.pt  flamo_svf_lowpass.safetensors  flamo_svf_lowshelf.pt  flamo_svf_lowshelf.safetensors  flamo_svf_notch.pt  flamo_svf_notch.safetensors  flamo_svf_peaking.pt  flamo_svf_peaking.safetensors  golden.json
crates/fluxion-ops/: Cargo.toml
crates/fluxion-ops/benches/: filters.rs
crates/fluxion-ops/examples/: fit_filter.rs
crates/fluxion-ops/src/: chebyshev.rs  delay.rs  design.rs  dynamics.rs  effect.rs  fir.rs  iir.rs  lib.rs  modulation.rs  rbj.rs  reverb.rs  stability.rs  transform.rs
crates/fluxion-ops/tests/: golden.rs  golden_data.rs
crates/fluxion-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/fluxion-py/python/fluxion/: __init__.py  _fluxion.pyi  augment.py  dataset.py  interop.py  jax.py  torch.py
crates/fluxion-py/src/: lib.rs  rt.rs
crates/fluxion-py/tests/: test_fluxion.py  test_rt.py
crates/fluxion-rt/: Cargo.toml
crates/fluxion-rt/examples/: fir_latency.rs  fir_probe.rs  latency_ccdf.rs
crates/fluxion-rt/src/: cpal_backend.rs  engine.rs  graph.rs  lib.rs  param.rs  ring.rs  stream.rs
crates/fluxion-rt/tests/: rt_safety.rs
crates/fluxion-wasm/: Cargo.toml
crates/fluxion-wasm/src/: lib.rs
scripts/: gen_golden.py
spikes/burn-cubecl-bridge/: Cargo.toml  README.md
spikes/burn-cubecl-bridge/src/: main.rs
spikes/c4-cubecl-biquad/: Cargo.toml  README.md
spikes/c4-cubecl-biquad/src/: main.rs
spikes/f0-burn-cuda/: Cargo.toml  README.md
spikes/f0-burn-cuda/src/: main.rs
spikes/throughput-vs-torchfx/: Cargo.toml  README.md  bench_torchfx.py
spikes/throughput-vs-torchfx/src/: main.rs
