[workspace]
resolver = "3"
members = ["crates/*"]
# GPU spikes are standalone (pull in Burn/CubeCL) and excluded from the default build.
# fluxion-py is a PyO3 cdylib built by maturin, not plain cargo (extension-module linking breaks
# `cargo test --workspace`), so it's a standalone crate too.
exclude = ["spikes", "crates/fluxion-py"]

# Shared metadata inherited by every member crate via `field.workspace = true`.
[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Matteo Spanio"]
repository = "https://github.com/matteospanio/fluxion"
homepage = "https://github.com/matteospanio/fluxion"
keywords = ["audio", "dsp", "differentiable", "gpu", "realtime"]
categories = ["multimedia::audio", "science", "mathematics"]

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"

# Small, fast release artifacts for the CLI and the cdylibs.
[profile.release]
lto = "thin"
codegen-units = 1
