[workspace]
resolver = "3"
members = ["crates/*"]
# fluxion-py is a PyO3 cdylib built by maturin, not plain cargo (extension-module linking breaks
# `cargo test --workspace`), so it's a standalone crate.
exclude = ["crates/fluxion-py"]

# Shared metadata inherited by every member crate via `field.workspace = true`.
[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Matteo Spanio"]
repository = "https://github.com/matteospanio/fluxion"
homepage = "https://github.com/matteospanio/fluxion"
keywords = ["audio", "dsp", "differentiable", "gpu", "realtime"]
categories = ["multimedia::audio", "science", "mathematics"]

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"

# Small, fast release artifacts for the CLI and the cdylibs.
[profile.release]
lto = "thin"
codegen-units = 1

# Temporary: cubecl 0.10.0 + pipelined pinned staging for large H2D uploads
# (upstream PR: https://github.com/tracel-ai/cubecl/pull/1404).
# Remove when the fix lands in a cubecl release.
# All cubecl crates must come from the same source or the graph gets duplicate types.
[patch.crates-io]
cubecl = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-common = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-core = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-cpp = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-cpu = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-cuda = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-hip = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-ir = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-macros = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-macros-internal = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-opt = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-runtime = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-std = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-wgpu = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-zspace = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
