[package]
name = "fluxion-autodiff"
description = "Fluxion: Burn Autodiff integration and per-framework (torch/jax) VJP adapters."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
# Register fluxion's analytic VJPs as Burn custom backward ops. Pulls in Burn (pre-1.0) + the
# NdArray CPU backend for testing; the default build stays pure-Rust and offline.
burn = ["dep:burn", "dep:fluxion-ops"]

[dependencies]
fluxion-ops = { path = "../fluxion-ops", optional = true }
burn = { version = "0.21", default-features = false, features = [
    "std",
    "autodiff",
    "ndarray",
], optional = true }
