[package]
name = "fluxion-autodiff"
description = "Fluxion: Burn Autodiff integration and per-framework (torch/jax) VJP adapters."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
# Register fluxion's analytic VJPs as Burn custom backward ops. Pulls in Burn (pre-1.0) + the
# NdArray CPU backend for testing; the default build stays pure-Rust and offline.
burn = ["dep:burn", "dep:fluxion-ops", "dep:fluxion-core", "dep:fluxion-backend"]
# GPU-resident differentiable ops: the analytic VJP kernels run on a resident Burn CubeCL tensor
# (no host roundtrip). Requires an NVIDIA GPU + CUDA toolkit to build/run; default build is unaffected.
cuda = ["burn", "burn/cuda", "dep:burn-cubecl", "dep:cubecl"]

[dependencies]
fluxion-ops = { path = "../fluxion-ops", optional = true }
fluxion-core = { path = "../fluxion-core", optional = true }
fluxion-backend = { path = "../fluxion-backend", optional = true }
burn = { version = "0.21", default-features = false, features = [
    "std",
    "autodiff",
    "ndarray",
], optional = true }
burn-cubecl = { version = "0.21", optional = true }
cubecl = { version = "0.10", features = ["cuda"], optional = true }

[[example]]
name = "learn_cutoff"
required-features = ["burn"]
