[package]
name = "fluxion-backend"
description = "Fluxion: lowering of the DSP graph to CubeCL (CUDA/HIP/Metal/Vulkan/WGSL) and CPU SIMD."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
fluxion-core = { path = "../fluxion-core" }
fluxion-ops = { path = "../fluxion-ops" }
# CubeCL (single-source GPU kernels) + SIMD multiversioning are added in later milestones.
