[package]
name = "fluxion-backend"
description = "Fluxion: lowering of the DSP graph to CubeCL (CUDA/HIP/Metal/Vulkan/WGSL) and CPU SIMD."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
# GPU execution via CubeCL on CUDA. Requires an NVIDIA GPU + CUDA toolkit to build/run; the default
# (feature off) build stays pure-Rust and offline.
cuda = ["dep:cubecl"]

[dependencies]
fluxion-core = { path = "../fluxion-core" }
fluxion-ops = { path = "../fluxion-ops" }
fluxion-rt = { path = "../fluxion-rt" }
cubecl = { version = "0.10", features = ["cuda"], optional = true }
