[package]
name = "fluxion-backend"
description = "Fluxion: lowering of the DSP graph to CubeCL (CUDA/HIP/Metal/Vulkan/WGSL) and CPU SIMD."
readme = "../../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
# GPU execution via CubeCL on CUDA. Requires an NVIDIA GPU + CUDA toolkit to build/run; the default
# (feature off) build stays pure-Rust and offline.
cuda = ["dep:cubecl"]

[dependencies]
fluxion-core = { path = "../fluxion-core", version = "0.0.0" }
fluxion-ops = { path = "../fluxion-ops", version = "0.0.0" }
fluxion-rt = { path = "../fluxion-rt", version = "0.0.0" }
rayon = "1"
cubecl = { version = "0.10", features = ["cuda"], optional = true }

[dev-dependencies]
# Bench harness only (A4); see fluxion-ops for the default-features rationale.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
# Benchmarks allocate/free large buffers per call; the system allocator returns
# them to the OS (mmap/munmap) and every iteration pays page faults. mimalloc
# retains and reuses the pages - the same role torch's caching allocator plays
# in the comparator benches.
mimalloc = "0.1"

[[bench]]
name = "batch"
harness = false
