[package]
name = "fluxion-cli"
description = "Fluxion: a modern, SoX-style command-line interface for audio DSP."
readme = "../../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

# The package is `fluxion-cli`; the installed binary is `fluxion`.
[[bin]]
name = "fluxion"
path = "src/main.rs"

[features]
# `play` / `record` realtime verbs (CPAL). Off by default so the base CLI pulls no audio libraries.
realtime = ["dep:fluxion-rt"]

[dependencies]
fluxion = { path = "../fluxion-facade", version = "0.0.0", features = ["realtime"] }
fluxion-io = { path = "../fluxion-io", version = "0.0.0" }
fluxion-rt = { path = "../fluxion-rt", version = "0.0.0", optional = true, features = ["cpal"] }
clap = { version = "4", features = ["derive"] }
glob = "0.3"

[dev-dependencies]
hound = "3"
