[package]
name = "fluxion"
description = "Differentiable, cross-vendor, framework-agnostic audio DSP with a functional graph API."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
fluxion-core = { path = "../fluxion-core" }
