[package]
name = "fluxion-ffi"
description = "Fluxion: stable C ABI surface (cbindgen header + DLPack tensor interop)."
# Ships a C artifact (staticlib/cdylib + generated header), not a crates.io Rust library — never published.
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

# A C-callable dynamic + static library, plus rlib so other Rust crates can link it in tests.
[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
fluxion-core = { path = "../fluxion-core", version = "0.0.0" }
fluxion-backend = { path = "../fluxion-backend", version = "0.0.0" }
# Realtime surface (fx_rt_*): the allocation-free streaming executor + cascade certification.
fluxion-ops = { path = "../fluxion-ops", version = "0.0.0" }
fluxion-rt = { path = "../fluxion-rt", version = "0.0.0" }
# Added when the surface grows: a DLPack binding crate for zero-copy GPU tensor handoff.
