[package]
name = "fluxion-io"
description = "Fluxion: audio decode/encode (Symphonia) and Arrow/Parquet batch IO."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
hound = "3.5"
# Added later: symphonia (flac/mp3/ogg/aac decode), arrow + parquet (batch IO).
