[package]
name = "fluxion-io"
description = "Fluxion: audio decode/encode (Symphonia) and Arrow/Parquet batch IO."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
fluxion-core = { path = "../fluxion-core" }
hound = "3.5"
symphonia = { version = "0.5", features = ["all-codecs", "all-formats"] }
# Added later: arrow + parquet (batch IO).
