[package]
name = "fluxion-ops"
description = "Fluxion: DSP primitives with hand-derived analytic forward + backward (VJP)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
fluxion-core = { path = "../fluxion-core" }
# Backward (VJP) passes + Burn/CubeCL backends are added in later milestones.
