[package]
name = "fluxion-ops"
description = "Fluxion: DSP primitives with hand-derived analytic forward + backward (VJP)."
readme = "../../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
fluxion-core = { path = "../fluxion-core", version = "0.0.0" }
rustfft = "6"  # FFT linear convolution for long FIR kernels (D5)
# Burn/CubeCL backends are added in later milestones.

[dev-dependencies]
# Bench harness only (A4). default-features off drops plotters/rayon so it stays a light, offline
# dev-dep; `cargo_bench_support` is what `cargo bench` needs to run the `harness = false` targets.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "filters"
harness = false
