# Standalone crate (its own workspace) — built into a Python wheel by maturin, NOT plain cargo.
# PyO3's `extension-module` defers libpython linking to import time, which breaks `cargo test`, so
# this is excluded from the main workspace (see the root Cargo.toml).
[package]
name = "fluxion-py"
description = "Fluxion: PyO3 Python bindings with DLPack and torch/jax autograd adapters."
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Matteo Spanio"]
repository = "https://github.com/matteospanio/fluxion"
homepage = "https://github.com/matteospanio/fluxion"

[workspace]

[lib]
name = "fluxion"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
fluxion-core = { path = "../fluxion-core" }
fluxion-ops = { path = "../fluxion-ops" }
fluxion-backend = { path = "../fluxion-backend" }

[profile.release]
lto = "thin"
codegen-units = 1
