# Standalone crate (its own workspace) — built into a Python wheel by maturin, NOT plain cargo.
# PyO3's `extension-module` defers libpython linking to import time, which breaks `cargo test`, so
# this is excluded from the main workspace (see the root Cargo.toml).
[package]
name = "fluxion-py"
description = "Fluxion: PyO3 Python bindings with DLPack and torch/jax autograd adapters."
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Matteo Spanio"]
repository = "https://github.com/matteospanio/fluxion"
homepage = "https://github.com/matteospanio/fluxion"

[workspace]

[features]
# GPU batch filtering (CUDA). Built only on CUDA hosts → the "GPU wheel"; the default build (CPU
# wheel) needs no CUDA. maturin: `maturin build --release --features cuda`.
cuda = ["fluxion-backend/cuda"]

[lib]
# Compiled core imported as `fluxion._fluxion`; the Python package (python/fluxion/) wraps it and
# adds the torch / jax autograd adapters.
name = "_fluxion"
crate-type = ["cdylib"]

[dependencies]
# abi3-py310: build a single stable-ABI wheel that works on CPython 3.10+ (one wheel, not per-version).
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
numpy = "0.22"
fluxion-core = { path = "../fluxion-core" }
fluxion-ops = { path = "../fluxion-ops" }
fluxion-backend = { path = "../fluxion-backend" }

[profile.release]
lto = "thin"
codegen-units = 1
