[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "fluxion"
version = "0.0.0"
description = "GPU-accelerated, differentiable audio DSP — Python bindings"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Matteo Spanio" }]
keywords = ["audio", "dsp", "differentiable", "gpu", "realtime"]
dependencies = ["numpy>=1.23"]  # numpy.from_dlpack + ndarray.__dlpack__ (zero-copy interop)

[project.optional-dependencies]
torch = ["torch>=2.0"]
test = ["pytest>=7"]

[tool.maturin]
# Mixed layout: the Rust extension is `fluxion._fluxion`; the Python package lives in python/fluxion/
# and adds the torch / jax adapters.
python-source = "python"
module-name = "fluxion._fluxion"
strip = true
