[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "fluxion"
# Version is single-sourced from Cargo.toml (maturin reads it); do not set it here.
dynamic = ["version"]
description = "GPU-accelerated, differentiable audio DSP — Python bindings"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Matteo Spanio" }]
keywords = ["audio", "dsp", "differentiable", "gpu", "realtime"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.23"]  # numpy.from_dlpack + ndarray.__dlpack__ (zero-copy interop)

[project.urls]
Homepage = "https://github.com/matteospanio/fluxion"
Repository = "https://github.com/matteospanio/fluxion"

[project.optional-dependencies]
torch = ["torch>=2.0"]
jax = ["jax>=0.4"]
interop = ["safetensors>=0.4"]  # load_flamo_sos from a .safetensors checkpoint
test = ["pytest>=7", "scipy", "array_api_strict", "array-api-compat"]

[tool.maturin]
# Mixed layout: the Rust extension is `fluxion._fluxion`; the Python package lives in python/fluxion/
# and adds the torch / jax adapters.
python-source = "python"
module-name = "fluxion._fluxion"
strip = true
