[package]
name = "fluxion-rt"
description = "Fluxion: real-time engine — lock-free SPSC ring buffer and allocation-free executor."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
fluxion-ops = { path = "../fluxion-ops" }
# Added when implemented: cpal (cross-platform realtime audio IO).
