[package]
name = "fluxion-rt"
description = "Fluxion: real-time engine — lock-free SPSC ring buffer and allocation-free executor."
readme = "../../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
# Cross-platform realtime audio I/O via CPAL. Requires the platform audio dev libraries (ALSA on
# Linux); the default build needs none, so it stays pure-Rust and offline.
cpal = ["dep:cpal"]

[dependencies]
fluxion-ops = { path = "../fluxion-ops", version = "0.0.0" }
cpal = { version = "0.15", optional = true }
