[package]
name = "fluxion-wasm"
description = "Fluxion: WebAssembly bindings (wasm-bindgen) for the CPU + WebGPU path."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

# Becomes `crate-type = ["cdylib"]` once wasm-bindgen is wired.
[dependencies]
# Added when implemented: wasm-bindgen, fluxion (facade); WebGPU via wgpu for the GPU path.
