# Standalone spike (its own workspace) — NOT part of the main fluxion build.
# Requires an NVIDIA GPU + CUDA toolkit (libnvrtc). Run on the GPU box:
#   CUDA_PATH=/usr/local/cuda PATH=/usr/local/cuda/bin:$PATH cargo run --release
[package]
name = "c4-cubecl-biquad"
version = "0.0.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
cubecl = { version = "0.10", features = ["cuda"] }
