# GPU SOS-cascade throughput bench (standalone — own workspace, not part of the main build).
# Needs an NVIDIA GPU + CUDA toolkit. Run on the GPU box:
#   CUDA_PATH=/usr/local/cuda PATH=/usr/local/cuda/bin:$PATH cargo run --release
[package]
name = "throughput-vs-torchfx"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[profile.release]
opt-level = 3

[dependencies]
cubecl = { version = "0.10", features = ["cuda"] }
cubecl-common = { version = "0.10", features = ["shared-bytes"] }
bytes = "1"

# Temporary: cubecl 0.10.0 + the create_with_data H2D fix (upstream PR pending,
# https://github.com/tracel-ai/cubecl). Remove when the fix lands in a cubecl release.
# All cubecl crates must come from the same source or the graph gets duplicate types.
[patch.crates-io]
cubecl = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-common = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-core = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-cpp = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-cpu = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-cuda = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-hip = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-ir = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-macros = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-macros-internal = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-opt = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-runtime = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-std = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-wgpu = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
cubecl-zspace = { git = "https://github.com/matteospanio/cubecl", branch = "fix-0.10/create-with-data-size-guard" }
